--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">Jessica Hua</a></h1>
-								<p>Computer Science | Software Engineering | Organzational Communication </p>
+								<p>Computer Science | Software Engineering | Organizational Communication </p>
 							</div>
 
 						<!-- Nav -->
@@ -160,7 +160,7 @@
 									<br>
 									<!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
 									<h3><a href="#">Hello!</a></h3>
-									<p>Hi, my name is Jessica Hua and I am a senior undergrad student at DePaul University expecting to graduate June 2017. I am pursuing a degree in Computer Science with a concentration in Software Engineering along with a minor in Organizational Communication. I have completed several technical projects during my time at DePaul where I am required to code, design, and document software. I also have experience in management, recruitment and consulting through my minor and holding leadership positions within organizations on campus. I am interested in utilizing both sets of skills in a product management or technical consulting position.</p>
+									<p>My name is Jessica Hua and I am a senior undergrad student at DePaul University expecting to graduate June 2017. I am pursuing a degree in Computer Science with a concentration in Software Engineering along with a minor in Organizational Communication. I have completed several technical projects during my time at DePaul where I am required to code, design, and document software. I also have experience in management, recruitment and consulting through my minor and holding leadership positions within organizations on campus. I am interested in utilizing both sets of skills in a product management or technical consulting position.</p>
 									<!-- <ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
 									</ul> -->
