--- a/pages/index.html
+++ b/pages/index.html
@@ -50,8 +50,8 @@
 											<li><a href="#">Nisl tempus</a></li>
 										</ul>
 									</li>
-									<li><a href="/resume">Resume</a></li>
-									<li><a href="/contacts">Contact</a></li>
+									<li><a href="resume.pdf">Resume</a></li>
+									<li><a href="/contact">Contact</a></li>
 								</ul>
 							</nav>
 
