--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Escape Velocity by HTML5 UP</title>
+		<title>Jessica Hua - About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,16 +22,17 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Escape Velocity</a></h1>
-								<p>A free responsive site template by HTML5 UP</p>
+								<h1><a href="index.html">About me</a></h1>
+								<p>Blah</p>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Home</a></li>
+									<li class="current"><a href="/">Home</a></li>
+									<li><a href="/about">About Me</a></li>
 									<li>
-										<a href="#">Dropdown</a>
+										<a href="#">Projects</a>
 										<ul>
 											<li><a href="#">Lorem ipsum</a></li>
 											<li><a href="#">Magna veroeros</a></li>
@@ -49,9 +50,8 @@
 											<li><a href="#">Nisl tempus</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="resume.pdf">Resume</a></li>
+									<li><a href="/contact">Contact</a></li>
 								</ul>
 							</nav>
 
