--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
 											<li><a href="#">Nisl tempus</a></li>
 										</ul>
 									</li>
-									<li><a href="resume.pdf">Resume</a></li>
+									<li><a href="/resume">Resume</a></li>
 									<li><a href="/contact">Contact</a></li>
 								</ul>
 							</nav>
