--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@
 									<li>
 										<a href="#">Projects</a>
 										<ul>
-											<li><a href="#">Lorem ipsum</a></li>
+											<li><a href="/writingsample">Writing Sample</a></li>
 											<li><a href="#">Magna veroeros</a></li>
 											<li><a href="#">Etiam nisl</a></li>
 											<li>
