Update with projects and links

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,19 +35,8 @@
 										<a href="#">Projects</a>
 										<ul>
 											<li><a href="/writingsample">Writing Sample</a></li>
-											<li><a href="#">Magna veroeros</a></li>
-											<li><a href="#">Etiam nisl</a></li>
-											<li>
-												<a href="#">Sed consequat</a>
-												<ul>
-													<li><a href="#">Lorem dolor</a></li>
-													<li><a href="#">Amet consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam nisl</a></li>
-													<li><a href="#">Sed feugiat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Nisl tempus</a></li>
+											<li><a href="/iOS">iOS Mobile App</a></li>
+											<li><a href="/enterprise-web-app">Enterprise Web Application</a></li>
 										</ul>
 									</li>
 									<li><a href="/resume">Resume</a></li>
