--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,19 +34,8 @@
 										<a href="#">Projects</a>
 										<ul>
 											<li><a href="/writingsample">Writing Sample</a></li>
-											<li><a href="#">Magna veroeros</a></li>
-											<li><a href="#">Etiam nisl</a></li>
-											<li>
-												<a href="#">Sed consequat</a>
-												<ul>
-													<li><a href="#">Lorem dolor</a></li>
-													<li><a href="#">Amet consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam nisl</a></li>
-													<li><a href="#">Sed feugiat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Nisl tempus</a></li>
+											<li><a href="/iOS">iOS Mobile App</a></li>
+											<li><a href="/enterprise-web-app">Enterprise Web Application</a></li>
 										</ul>
 									</li>
 									<li><a href="/resume">Resume</a></li>
@@ -62,11 +51,9 @@
 			<!-- Footer -->
 				<div id="footer-wrapper" class="wrapper">
 					<div id="footer" class="container">
-						<hr />
 						<div class="row 150%">
-							<div class="6u 12u(mobile)">
+							<!-- <div class="6u 12u(mobile)">
 
-								<!-- Contact Form -->
 									<section>
 										<form method="post" action="#">
 											<div class="row 50%">
@@ -93,19 +80,17 @@
 										</form>
 									</section>
 
-							</div>
-							<div class="6u 12u(mobile)">
+							</div> -->
+							<div class="12u 12u(mobile)">
 
 								<!-- Contact -->
 									<section class="feature-list small">
 										<div class="row">
 											<div class="6u 12u(mobile)">
 												<section>
-													<h3 class="icon fa-home">Mailing Address</h3>
+													<h3 class="icon fa-home">Location</h3>
 													<p>
-														Untitled Corporation<br />
-														1234 Somewhere Rd #987<br />
-														Nashville, TN 00000-0000
+														Chicago, IL<br />
 													</p>
 												</section>
 											</div>
@@ -113,9 +98,8 @@
 												<section>
 													<h3 class="icon fa-comment">Social</h3>
 													<p>
-														<a href="#">@untitled-corp</a><br />
-														<a href="#">linkedin.com/untitled</a><br />
-														<a href="#">facebook.com/untitled</a>
+														<a href="https://www.linkedin.com/in/jessicahua/">LinkedIn</a><br />
+														<a href="https://github.com/jessicahua95">GitHub</a><br />
 													</p>
 												</section>
 											</div>
@@ -125,7 +109,7 @@
 												<section>
 													<h3 class="icon fa-envelope">Email</h3>
 													<p>
-														<a href="#">info@untitled.tld</a>
+														<a href="#">jessicahua95@gmail.com</a>
 													</p>
 												</section>
 											</div>
@@ -133,7 +117,7 @@
 												<section>
 													<h3 class="icon fa-phone">Phone</h3>
 													<p>
-														(000) 555-0000
+														(773) 510-5953
 													</p>
 												</section>
 											</div>
