Website in progress

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,8 @@
 							<div id="logo">
 								<h1><a href="index.html">Jessica Hua</a></h1>
 								<p>Computer Science | Software Engineering | Organizational Communication </p>
+								<br> 
+								<p> Website is currently in progress! </p>
 							</div>
 
 						<!-- Nav -->
