--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
 								<h1><a href="index.html">Jessica Hua</a></h1>
 								<p>Computer Science | Software Engineering | Organizational Communication </p>
 								<br> 
-								<p> Website is currently in progress! </p>
+								<p style="color: #ffffff"> Website is currently in progress! </p>
 							</div>
 
 						<!-- Nav -->
