--- a/pages/index.html
+++ b/pages/index.html
@@ -25,8 +25,8 @@
 								<h1><a href="index.html">Jessica Hua</a></h1>
 								<p>Computer Science | Software Engineering | Organizational Communication </p>
 								<br> 
+								<h1> Website is currently in progress! </h1>
 							</div>
-							<p style="color: #ffffff"> Website is currently in progress! </p>
 
 						<!-- Nav -->
 							<nav id="nav">
